frontend/test/should_fail/ret_008.grg
using attrib_model_001;

rule r : (Node, NINT) {
	x: Node;
	y: Node;

	modify {
		return(x, y);
	}
}

